--- a/README
+++ b/README
@@ -1,52 +1,28 @@
-Domain-PublicSuffix
-
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
-
+Domain-PublicSuffix version 0.03
+================================
 
 INSTALLATION
 
-To install this module, run the following commands:
+To install this module type the following:
 
-	perl Build.PL
-	./Build
-	./Build test
-	./Build install
+   perl Makefile.PL
+   make
+   make test
+   make install
 
-SUPPORT AND DOCUMENTATION
+DEPENDENCIES
 
-After installing, you can find documentation for this module with the
-perldoc command.
+This module requires these other modules and libraries:
 
-    perldoc Domain::PublicSuffix
+  Class::Accessor::Fast
+  Domain::Validate::Domain
 
-You can also look for information at:
+COPYRIGHT AND LICENSE
 
-    RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Domain-PublicSuffix
+Copyright (C) 2008 by Nicholas Melnick
 
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Domain-PublicSuffix
+This library is free software; you can redistribute it and/or modify
+it under the same terms as Perl itself, either Perl version 5.8.8 or,
+at your option, any later version of Perl 5 you may have available.
 
-    CPAN Ratings
-        http://cpanratings.perl.org/d/Domain-PublicSuffix
-
-    Search CPAN
-        http://search.cpan.org/dist/Domain-PublicSuffix
-
-
-COPYRIGHT AND LICENCE
-
-Copyright (C) 2008 Nicholas Melnick
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
 
