import Domain-PublicSuffix 0.04 from CPAN
git-cpan-module:   Domain-PublicSuffix
git-cpan-version:  0.04
git-cpan-authorid: NMELNICK
git-cpan-file:     authors/id/N/NM/NMELNICK/Domain-PublicSuffix-0.04.tar.gz

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Domain-PublicSuffix version 0.03
+Domain-PublicSuffix version 0.04
 ================================
 
 INSTALLATION
@@ -16,6 +16,8 @@ This module requires these other modules and libraries:
 
   Class::Accessor::Fast
   Domain::Validate::Domain
+  File::Spec
+  Test::More
 
 COPYRIGHT AND LICENSE
 
