Split processing code of domain name to different method, and added get_suffix method.  Also added punification of data file as it is read

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Domain-PublicSuffix version 0.04
+Domain-PublicSuffix version 0.05
 ================================
 
 INSTALLATION
@@ -18,6 +18,8 @@ This module requires these other modules and libraries:
   Domain::Validate::Domain
   File::Spec
   Test::More
+  Net::IDN::Punycode
+
 
 COPYRIGHT AND LICENSE
 
@@ -27,4 +29,5 @@ This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.8 or,
 at your option, any later version of Perl 5 you may have available.
 
-
+Updates and changes to the original 0.04 version of this code
+Copyright (C) 2012 by Doug Henderson
