--- a/README
+++ b/README
@@ -32,3 +32,5 @@ Updates and changes to the original 0.04 version of this code.
 Copyright (C) 2012 by Doug Henderson
 
 See Changes file for details.
+
+Based on information available at: http://publicsuffix.org/
